--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,9 @@ loguru==0.7.2
 # WebSocket support (for real-time logs)
 websockets==12.0
 
+# Scheduler (for auto sync)
+apscheduler==3.10.4
+
 # Testing
 pytest==7.4.4
 pytest-asyncio==0.23.3
